commit code cho lab 1

--- a/Slide1/index.html
+++ b/Slide1/index.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
             crossorigin="anonymous"></script>
-    <title>TS00001-Binh-Lab1</title>
+    <title>TS00832-AnhHao-Lab1</title>
 </head>
 
 <body>
 <div class="container">
-    <h1>TS00001-Binh-Lab1</h1>
+    <h1>TS00001inh-Lab1</h1>
 </div>
 <div class="container">
     <header class="row bg-warning p-2">Header</header>
