--- a/Lab1/bai2.html
+++ b/Lab1/bai2.html
@@ -26,7 +26,7 @@
 
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-list"></i> Bài viết</a>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i> Bài viết</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa-solid fa-film"></i> Video</a>
